--- a/res/values/lucid_strings.xml
+++ b/res/values/lucid_strings.xml
@@ -64,4 +64,12 @@
     <string name="state_loading">Applying\u2026</string>
     <string name="app_drawer_category_title">App drawer</string>
 
+    <!-- Icon size -->
+    <string name="icon_size_title">Icon size</string>
+    <string name="icon_size_extra_small">Tiny</string>
+    <string name="icon_size_small">Small</string>
+    <string name="icon_size_average">Default</string>
+    <string name="icon_size_large">Large</string>
+    <string name="icon_size_extra_large">Extra large</string>
+
 </resources>
