--- a/res/values/lucid_strings.xml
+++ b/res/values/lucid_strings.xml
@@ -49,4 +49,13 @@
     <string name="label_search">Search</string>
     <string name="label_voice_search">Voice search</string>
 
+    <!-- Grid -->
+    <string name="num_default">Default</string>
+    <string name="grid_category_title">Columns and rows</string>
+    <string name="number_of_columns_title">Grid and app drawer columns</string>
+    <string name="number_of_rows_title">Grid and app drawer rows</string>
+    <string name="number_of_hotseat_title">Homescreen quicklaunch icons</string>
+    <string name="state_loading">Applying\u2026</string>
+    <string name="app_drawer_category_title">App drawer</string>
+
 </resources>
