Add toggle for desktop and drawer labels
Change-Id: I98063b7adaf22029c4bfa50d2cac730f3612e121
Signed-off-by: Joey <joey@lineageos.org>

--- a/res/values/lucid_strings.xml
+++ b/res/values/lucid_strings.xml
@@ -66,4 +66,8 @@
 
     <!-- Icon size -->
     <string name="icon_size_title">Icon size</string>
+
+    <!-- Hide labels -->
+    <string name="desktop_show_labels">Show icon labels on desktop</string>
+    <string name="drawer_show_labels">Show icon labels in drawer</string>
 </resources>
