--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -88,6 +88,18 @@
         android:persistent="true" />
 
     <SwitchPreference
+         android:key="pref_drawer_show_labels"
+         android:title="@string/drawer_show_labels"
+         android:defaultValue="true"
+         android:persistent="true" />
+
+    <SwitchPreference
+        android:key="pref_desktop_show_labels"
+        android:title="@string/desktop_show_labels"
+        android:defaultValue="true"
+        android:persistent="true" />
+
+    <SwitchPreference
         android:key="pref_show_workspace_grad"
         android:title="@string/workspace_gradient_title"
         android:summary="@string/workspace_gradient_summary"
