--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -84,7 +84,7 @@
         android:summary="%s"
         android:entries="@array/icon_size_names"
         android:entryValues="@array/icon_size_values"
-        android:defaultValue="average"
+        android:defaultValue="100"
         android:persistent="true" />
 
     <SwitchPreference
