--- a/res/values/lucid_strings.xml
+++ b/res/values/lucid_strings.xml
@@ -40,4 +40,9 @@
     <string name="pref_sleep_gesture_title">Double tap to sleep</string>
     <string name="pref_sleep_gesture_summary">Double tap on empty space for power-off</string>
 
+    <!-- Google Feed -->
+    <string name="title_show_google_app">Show Google app</string>
+    <string name="msg_minus_one_on_left">When you swipe right from main home screen</string>
+    <string name="msg_minus_one_on_right">When you swipe left from main home screen</string>
+
 </resources>
