LucidLauncher: Add support for Google QuickSearchBox
Moves QSB to the hotseat and adds support for basic Google search functionality. This iteration does not support extended features (ex. Google Doodle) but has plans to support these features later on

Change-Id: Ia905b475e133c82814745e0cd037d07f7b41d1a9

--- a/res/values/lucid_strings.xml
+++ b/res/values/lucid_strings.xml
@@ -45,4 +45,8 @@
     <string name="msg_minus_one_on_left">When you swipe right from main home screen</string>
     <string name="msg_minus_one_on_right">When you swipe left from main home screen</string>
 
+    <!-- QSB -->
+    <string name="label_search">Search</string>
+    <string name="label_voice_search">Voice search</string>
+
 </resources>
