--- a/res/values/lucid_strings.xml
+++ b/res/values/lucid_strings.xml
@@ -36,4 +36,8 @@
     <string name="category_general" translatable="false">General</string>
     <string name="category_customization" translatable="false">Customization</string>
 
+    <!-- DT2S -->
+    <string name="pref_sleep_gesture_title">Double tap to sleep</string>
+    <string name="pref_sleep_gesture_summary">Double tap on empty space for power-off</string>
+
 </resources>
