--- a/res/values/lucid_colors.xml
+++ b/res/values/lucid_colors.xml
@@ -23,4 +23,8 @@
     <color name="qsb_drawer_text_color_normal">#ff212121</color>
     <color name="qsb_background_default">#ccffffff</color>
     <color name="qsb_background_default_dark">#99fafafa</color>
+
+    <!-- Custom icon pack as default. Can be empty -->
+    <string name="config_defaultIconPackPackage" translatable="false"></string>
+
 </resources>
