Add two lines app label option
Signed-off-by: DennySPb <dennyspb@gmail.com>
Change-Id: I8e5cc84e1ca61da268460c0a41127c3ec4b35a74

--- a/res/values/lucid_strings.xml
+++ b/res/values/lucid_strings.xml
@@ -70,4 +70,8 @@
     <!-- Hide labels -->
     <string name="desktop_show_labels">Show icon labels on desktop</string>
     <string name="drawer_show_labels">Show icon labels in drawer</string>
+
+    <!-- Two line labels -->
+     <string name="desktop_two_line_labels">Allow two line labels on desktop</string>
+     <string name="drawer_two_line_labels">Allow two line labels in drawer</string>
 </resources>
